--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
     "target": "es2020",
     "module": "commonjs",
     "rootDirs": [
-      "./src"
+      "./src",
+      "./tests"
     ],
     "outDir": "./dist",
     "esModuleInterop": true,
